Add botstram for project page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<html>
+<head>
+<title>Rice University project</title>
+<link rel='stylesheet' href="./css/bootstrap.min.css">
+</head>
+<body>
+	Hello World
+<script data-rocketsrc="./bootstrap.min.js" async type="text/rocketscript"></script>
+</body>
+</html>
