--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
 <link rel='stylesheet' href="./css/bootstrap.min.css">
 </head>
 <body>
-	Hello World
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Rice university project</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li><a href="#">Page 2</a></li> 
+      <li><a href="#">Page 3</a></li> 
+    </ul>
+  </div>
+</nav>
+<div class="header">
+	<div class="row">
+		<div class="col-md-12">
+			<h1>Hello World</h1>
+		</div>
+	</div>
+</div>
+
 <script data-rocketsrc="./bootstrap.min.js" async type="text/rocketscript"></script>
 </body>
 </html>
