--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     </ul>
   </div>
 </nav>
-<div class="header">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>Hello World</h1>
-		</div>
-	</div>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Hello World</h1> 
+    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
+    responsive, mobile-first projects on the web.</p> 
+  </div>
+  <p>This is some text.</p> 
+  <p>This is another text.</p> 
 </div>
 
 <script data-rocketsrc="./bootstrap.min.js" async type="text/rocketscript"></script>
